# fpg-convention

./: README.md  pyproject.toml  pyrightconfig.json
config/: template.toml
src/fpg/: __init__.py  entities.py  evaluation.py  factory.py  model_output.py  profile.py  scenario.py  types.py  version.py  vocab.py
src/fpg/profiles/: core.toml
tests/: test_evaluation.py
